// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-3-69"
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <div
    className="MuiPaper-root-93 MuiPaper-elevation2-97 MuiPaper-rounded-94 MuiCard-root-92"
  >
    <div
      className="MuiCardContent-root-120"
    >
      <div
        style={
          Object {
            "marginBottom": 8,
          }
        }
      >
        <span
          className="MuiTypography-root-121 MuiTypography-caption-131"
        >
          Fornecedor
        </span>
        <h3
          className="MuiTypography-root-121 MuiTypography-subheading-128"
        />
      </div>
      <div
        pathname={undefined}
        text="para ver o contato do fornecedor."
      >
        SignUpLink
      </div>
    </div>
  </div>
</div>
`;

exports[`with current user renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-lg-3-69"
  style={
    Object {
      "marginBottom": 16,
    }
  }
>
  <div
    className="MuiPaper-root-93 MuiPaper-elevation2-97 MuiPaper-rounded-94 MuiCard-root-92"
  >
    <div
      className="MuiCardContent-root-120"
    >
      <div
        style={
          Object {
            "marginBottom": 8,
          }
        }
      >
        <span
          className="MuiTypography-root-121 MuiTypography-caption-131"
        >
          Fornecedor
        </span>
        <h3
          className="MuiTypography-root-121 MuiTypography-subheading-128"
        />
      </div>
      <h3
        className="MuiTypography-root-121 MuiTypography-subheading-128"
        style={
          Object {
            "marginBottom": 10,
          }
        }
      />
      <div
        style={
          Object {
            "textDecoration": "none",
          }
        }
        to="/suppliers/undefined"
      >
        Link - 
        <button
          className="MuiButtonBase-root-161 MuiButton-root-145 MuiButton-raised-151 MuiButton-raisedPrimary-152"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-146"
          >
            Ver perfil
          </span>
          <span
            className="MuiTouchRipple-root-164"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
